<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/doge"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_price"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:text="@string/creation_by"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/author"
            android:layout_below="@id/current_price"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/d3nn7"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@id/author"
            android:layout_centerHorizontal="true"
            android:id="@+id/links">
            <ImageView
                android:id="@+id/website"
                android:layout_width="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/website" />
            <ImageView
                android:id="@+id/github"
                android:layout_width="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/github" />
            <ImageView
                android:id="@+id/instagram"
                android:layout_width="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/instagram" />
            <ImageView
                android:id="@+id/paypal"
                android:layout_width="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/paypal" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/links"
            android:id="@+id/thirdparty"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/third_party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/third_party"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/special_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/third_party"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="35dp"
                android:text="@string/special_thanks"
                android:textSize="40sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/special_thanks"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:textColor="@color/link"
                    android:id="@+id/fontawesome"
                    android:text="FontAwesome"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/volley"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/link"
                    android:text="Volley"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/binance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/link"
                    android:textAlignment="center"
                    android:text="Binance"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/dogecoin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/link"
                    android:textAlignment="center"
                    android:text="Dogecoin"
                    android:textSize="17sp" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/version"
                android:layout_marginStart="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/current_version"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>